<resources>
    <string name="app_name">Mutimedia Demo</string>


    <!--strings-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="device_list">Device List</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="btn_logout_from_google">Logout</string>
    <string name="btn_revoke_access">Revoke</string>
    <string name="loading">loading</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="get_password">Get Password</string>
    <string name="key_shared_prefs">SHARED_PREFS</string>
    <string name="first_time_launch">IsFirstTimeLaunch</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="password_length">Password should be greater than 6</string>
    <string name="internet_alert">Internet is not available ! \nkindly change your settings</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_no">Enter Phone Number</string>
    <string name="enter_valid_phone">Enter Valid Phone number</string>
    <string name="enter_confirm_pass">Enter Confirm Password</string>
    <string name="password_doest_matching">Enter same password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="key_serializable">key_serializable</string>
    <string name="key_login_username">key_login_username</string>
    <string name="key_login_password">key_login_password</string>
</resources>
