<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dp_5"
    android:background="@color/app_background"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/color_white"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/lytHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_screen3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_20"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_5"
                android:paddingTop="@dimen/dp_20"
                android:text="Register - Profile"
                android:textColor="@color/color_white"
                android:textSize="@dimen/size_font_18" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_5"
                android:padding="@dimen/dp_5"
                android:src="@drawable/ic_person_add_white_24dp"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">


                <LinearLayout
                    android:id="@+id/lytInputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editName"
                            android:maxLength="70"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textSize="@dimen/size_font_14" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:visibility="visible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_number"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textSize="@dimen/size_font_14" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editEmail"
                            android:maxLength="90"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:textSize="@dimen/size_font_14" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editPassword"
                            android:maxLength="70"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textWebPassword"
                            android:textSize="@dimen/size_font_14" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editConfirmPassword"
                            android:maxLength="70"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textWebPassword"
                            android:textSize="@dimen/size_font_14" />
                    </android.support.design.widget.TextInputLayout>

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"/>

                        <RadioButton
                            android:id="@+id/radioFeMale"
                            android:layout_marginLeft="@dimen/dp_50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"/>
                    </RadioGroup>


                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_15"
                        android:background="@drawable/rounded_background"
                        android:text="@string/register"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/size_font_14" />

                    <TextView
                        android:id="@+id/txtLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:gravity="center_horizontal"
                        android:text="Already a member ? Login here.."
                        android:textColor="@color/bg_screen3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_50"></View>

                </LinearLayout>




        </ScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>